force-app/main/default/objects/Account/fields/Billing_Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Billing_Address_Custom__c</fullName>
    <formula>Name &amp; &quot;;&quot; &amp; BillingStreet &amp; &quot;;&quot; &amp; BillingCity &amp; &quot;;&quot; &amp; BillingState &amp; &quot;;&quot; &amp; BillingCountry &amp; &quot;;&quot; &amp; BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Address Custom</label>
    <type>Text</type>
</CustomField>