force-app/main/default/objects/Account/fields/Shipping_Address_Custom__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Custom__c</fullName>
    <formula>Name &amp; &quot;;&quot; &amp; ShippingStreet &amp; &quot;;&quot; &amp; ShippingCity &amp; &quot;;&quot; &amp; ShippingState &amp; &quot;;&quot; &amp; ShippingCountry &amp; &quot;;&quot; &amp; ShippingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Address Custom</label>
    <type>Text</type>
</CustomField>